# adhan

./: .dockerignore  .gitignore  ADHAN_MODEL.yz  CYCLE_4_COMPLETION.md  CYCLE_5_COMPLETE.md  DEV.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  LLM_DEVELOPMENT_SETUP.md  MODERN_CORPUS_SUMMARY.md  README.md  REPORT.md  ROADMAP.md  ROADMAP_JAX_SLM.md  ROTATE_26_CYCLE_5_ARIVU_SUMMARY.txt  TRAINING.md  TRAINING_GUIDE.md  TRAINING_PARAMETERS_RPi.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-jax.txt  requirements.txt  setup.py
.github/workflows/: lint.yml  test.yml  type-check.yml
config/: cluster.yaml  default.yaml  rpi5.yaml
data/: README.md  combined_corpus_cycle6.jsonl
data/news_tamil/: test_scrape.jsonl
data/pre_training/tamil_texts/: all_sentences_modern.jsonl  all_sentences_rebalanced.jsonl  manifest.json  wiki_api_manifest.json  wiki_sentences.jsonl
data/raw/: projectmadurai_sample20.jsonl  tamil_social_sample.jsonl  tamilvu_literature.jsonl
data/raw/pdf_books_manifests/: pm0001.txt  pm0002.jsonl  pm0004.txt  pm0006_01.txt  pm0006_02.jsonl  pm0006_02.txt  pm0008.jsonl  pm0008.txt  pm0010.jsonl  pm0011.jsonl  pm0011.txt  pm0013.jsonl  pm0013.txt  pm0014.jsonl  pm0014.txt  pm0016.txt  pm0018.txt
data/raw/projectmadurai_hf/: README.md  test.jsonl
data/raw/projectmadurai_manifests/: manifest_index.json  pm0001.jsonl  pm0003.jsonl  pm0003.txt  pm0004.txt  (+4 more)
docs/: ADHAN_STORY.md  ARCHITECTURE_SWARAM_SLM.md  COMPLETION_TRACKER.md  CORE_DOMAIN_ADHAN_INTEGRATION.md  DATA_STRUCTURE_QUICK_REF.md  DEPLOYMENT.md  EVAL_TAMIL.md  FINAL_SUMMARY.md  IMPROVEMENTS.md  LLM_DEVELOPMENT_SETUP.md  MINIMAL_ARCHITECTURE.md  PERFORMANCE.md  PHASE2_CORPUS.md  PHASE_A_TRACKER.md  PROJECT_CONFIG.md  SECURITY_HARDENING.md  SECURITY_SUMMARY.md  TRAINING_GUIDE.md  YAZH_FOUNDATION.md  archive_TVA_BOK_0005884_page_n39.md
models/aadhan-mlm-v1/: config.json  tokenizer_config.json  training_results.json
models/adhan-gemma-v1/: Modelfile  training_config.json
notebooks/: adhan_gemma_training.ipynb
scripts/: clean_tamil_text.py  collect_colloquial_tamil.py  export_onnx.py  extract_tholkappiyam.py  generate_slm.py  merge_and_export.py  merge_corpora.py  phase2_corpus_build.py  phase2_validate.py  prepare_full_dataset.py  prepare_slm_corpus.py  quantize_model.py  repo_stats.py  run_api_server.py  run_model.py  run_scraper.py  run_training.py  scrape_news_tamil.py  scrape_news_tamil_enhanced.py  synthetic_tamil_data_pipeline.py  tamil_agglutinative_tokenizer.py  tamil_eval_framework.py  tamil_tokenizer.py  test_ollama.sh  train_adhan_real.py  train_adhan_s.py
src/: gpu_lora_train.py
src/adhan/: __init__.py
src/adhan_slm/: README.md  __init__.py  inference.py
src/core/: __init__.py  keys.py
src/data_scraper/: README.md  __init__.py  extract_wiki_sentences.py  merge_corpora.py  merge_hf_datasets.py  minimal_scraper.py  pmworks_extractor.py  tamil_corpus_scraper.py
src/notebooks/: 01_setup_and_exploration.ipynb  02_model_training.ipynb  03_gemma_training.ipynb
tests/: conftest.py
tests/integration/: __init__.py  test_api_inference.py
(+506 files in other folders)
