[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adhan-slm"
version = "0.1.0.dev0"
description = "Adhan · Native Tamil Small Language Model (SLM) with Swaram Tokenization"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Yazhi-Lem Team", email = "vazav@lemuria.org.in" }
]
keywords = ["tamil", "nlp", "language-model", "llm", "slm", "jax", "flax", "swaram", "tokenizer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
jax = [
    "jax[cuda12]>=0.4.20",
    "flax>=0.7.4",
    "optax>=0.1.5",
    "orbax-checkpoint>=0.5.0",
    "mlflow>=2.10.0",
]
pytorch = [
    "torch>=2.1.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "accelerate>=0.25.0",
    "peft>=0.7.0",
    "bitsandbytes>=0.41.0",
]
tamil-nlp = [
    "open-tamil>=1.1",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
all = [
    "adhan-slm[jax,pytorch,tamil-nlp,dev]",
]

[project.urls]
Homepage = "https://github.com/yazhi-lem/adhan"
Documentation = "https://github.com/yazhi-lem/adhan/docs"
Repository = "https://github.com/yazhi-lem/adhan.git"
"Bug Tracker" = "https://github.com/yazhi-lem/adhan/issues"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["adhan_slm"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
strict_optional = true
show_error_codes = true
show_error_context = true

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers -v --tb=short"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow tests",
]
